--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,13 @@ Description: A conglomeration of all the mini functions and packages that I use
     on a daily basis
 Depends:
     R (>= 3.3.0)
+Imports:
+	dplyr,
+    ggplot2,
+    tidyr,
+    stringr,
+    reshape2, 
+    lubridate
 License: MIT? I dunno
 Encoding: UTF-8
 LazyData: true
