--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,13 @@ export(theme_nothing)
 export(theme_nyt)
 export(theme_nyt_no_horiz)
 export(theme_nyt_vert_horiz)
+import(ggplot2)
+import(lubridate)
+import(reshape2)
+import(rvest)
+import(scales)
+import(stats)
+import(stringr)
+import(tidyr)
+import(utils)
+import(zoo)
