--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(theme_nothing)
 export(theme_nyt)
 export(theme_nyt_no_horiz)
 export(theme_nyt_vert_horiz)
+import(dplyr)
 import(ggplot2)
 import(lubridate)
+import(readr)
 import(reshape2)
 import(rvest)
 import(scales)
